--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
     "popper.js": "^1.12.9",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
+    "react-compat": "0.0.1",
     "react-dom": "^15.4.2",
-    "react-redux": "^5.0.6",
-    "redux": "^3.6.0",
+    "react-redux": "^5.1.1",
+    "redux": "^3.7.2",
     "redux-thunk": "2.2.0",
     "thunk": "0.0.1"
   },
@@ -38,7 +39,7 @@
     "exports-loader": "0.6.4",
     "mocha": "2.3.3",
     "react-addons-test-utils": "15.6.0",
-    "react-dom": "0.14.9",
+    "react-dom": "^0.14.9",
     "redux-mock-store": "1.2.3",
     "redux-test-utils": "0.1.2",
     "sinon": "1.15.4",
